--- a/jquery/_doc/index.html
+++ b/jquery/_doc/index.html
@@ -1,94 +1,117 @@
-<h2>Карта функций</h2>
+<!DOCTYPE html>
+<html lang="ru">
 
-<h3>Селекторы</h3>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>JQuery Документация</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <script type="text/javascript" src=""></script>
+</head>
 
-<p><strong>Базовые</strong></p>
-<ul>
-  <li><a href="" class="doc">id</a></li>
-  <li><a href="" class="doc">.class</a></li>
-  <li><a href="" class="doc">tagName</a></li>
-  <li><a href="" class="doc">*</a></li>
-</ul>
-<p><strong>Взаимодействия</strong></p>
-<ul>
-  <li><a href="" class="doc">first, second, ...</a></li>
-  <li><a href="" class="doc">outer inner</a></li>
-  <li><a href="" class="doc">parent > child</a></li>
-  <li><a href="" class="doc">prev + next</a></li>
-  <li><a href="" class="doc">prev ~ next</a></li>
-</ul>
-<p><strong>По атрибутам</strong></p>
-<ul>
-  <li><a href="" class="doc">[name]</a></li>
-  <li><a href="" class="doc">[name = value]</a></li>
-  <li><a href="" class="doc">[name != value]</a></li>
-  <li><a href="" class="doc">[name ^= value]</a></li>
-  <li><a href="" class="doc">[name $= value]</a></li>
-  <li><a href="" class="doc">[name *= value]</a></li>
-  <li><a href="" class="doc">[name ~= value]</a></li>
-  <li><a href="" class="doc">[name |= value]</a></li>
-  <li><a href="" class="doc">[first][second][...</a></li>
-</ul>
-<p><strong>Простые фильтры</strong></p>
-<ul>
-  <li><a href="" class="doc">:first</a></li>
-  <li><a href="" class="doc">:last</a></li>
-  <li><a href="" class="doc">:eq(index)</a></li>
-  <li><a href="" class="doc">:not(selector)</a></li>
-  <li><a href="" class="doc">:even</a></li>
-  <li><a href="" class="doc">:odd</a></li>
-  <li><a href="" class="doc">:gt(n)</a></li>
-  <li><a href="" class="doc">:lt(n)</a></li>
-  <li><a href="" class="doc">:header</a></li>
-  <li><a href="" class="doc">:animated</a></li>
-  <li><a href="" class="doc">:hidden</a></li>
-  <li><a href="" class="doc">:visible</a></li>
-  <li><a href="" class="doc">:lang()</a></li>
-</ul>
-<p><strong>Фильтры дочерних элементов</strong></p>
-<ul>
-  <li><a href="" class="doc">:first-child</a></li>
-  <li><a href="" class="doc">:last-child</a></li>
-  <li><a href="" class="doc">:nth-child(conditions)</a></li>
-  <li><a href="" class="doc">:nth-child-last(conditions)</a></li>
-  <li><a href="" class="doc">:only-child</a></li>
-  <li><a href="" class="doc">:first-of-type</a></li>
-  <li><a href="" class="doc">:last-of-type</a></li>
-</ul>
-<p><strong>Фильтры по содержимому</strong></p>
-<ul>
-  <li><a href="" class="doc">:contains(text)</a></li>
-  <li><a href="" class="doc">:empty</a></li>
-  <li><a href="" class="doc">:has(selector)</a></li>
-  <li><a href="" class="doc">:parent</a></li>
-</ul>
-<p><strong>Фильтры форм</strong></p>
-<ul>
-  <li><a href="" class="doc">:input</a></li>
-  <li><a href="" class="doc">:button</a></li>
-  <li><a href="" class="doc">:radio</a></li>
-  <li><a href="" class="doc">:checkbox</a></li>
-  <li><a href="" class="doc">:text</a></li>
-  <li><a href="" class="doc">:password</a></li>
-  <li><a href="" class="doc">:file</a></li>
-  <li><a href="" class="doc">:submit</a></li>
-  <li><a href="" class="doc">:reset</a></li>
-  <li><a href="" class="doc">:image</a></li>
-  <li><a href="" class="doc">:focus</a></li>
-  <li><a href="" class="doc">:selected</a></li>
-  <li><a href="" class="doc">:checked</a></li>
-  <li><a href="" class="doc">:enabled</a></li>
-  <li><a href="" class="doc">:disabled</a></li>
-</ul>
+<body>
+  <div class="container">
+    <div class="area"></div>
+    <div class="area"></div>
+    <div class="area"></div>
+    <div class="area"></div>
+    <div class="area"></div>
+    <div class="area"></div>
+    <div class="area"></div>
+    <div class="area"></div>
+    <div class="area"></div>
+    <h2>Карта функций</h2>
+    <h3>Селекторы</h3>
+    <p><strong>Базовые</strong></p>
+    <ul>
+      <li><a href="" class="doc">id</a></li>
+      <li><a href="" class="doc">.class</a></li>
+      <li><a href="" class="doc">tagName</a></li>
+      <li><a href="" class="doc">*</a></li>
+    </ul>
+    <p><strong>Взаимодействия</strong></p>
+    <ul>
+      <li><a href="" class="doc">first, second, ...</a></li>
+      <li><a href="" class="doc">outer inner</a></li>
+      <li><a href="" class="doc">parent > child</a></li>
+      <li><a href="" class="doc">prev + next</a></li>
+      <li><a href="" class="doc">prev ~ next</a></li>
+    </ul>
+    <p><strong>По атрибутам</strong></p>
+    <ul>
+      <li><a href="" class="doc">[name]</a></li>
+      <li><a href="" class="doc">[name = value]</a></li>
+      <li><a href="" class="doc">[name != value]</a></li>
+      <li><a href="" class="doc">[name ^= value]</a></li>
+      <li><a href="" class="doc">[name $= value]</a></li>
+      <li><a href="" class="doc">[name *= value]</a></li>
+      <li><a href="" class="doc">[name ~= value]</a></li>
+      <li><a href="" class="doc">[name |= value]</a></li>
+      <li><a href="" class="doc">[first][second][...</a></li>
+    </ul>
+    <p><strong>Простые фильтры</strong></p>
+    <ul>
+      <li><a href="" class="doc">:first</a></li>
+      <li><a href="" class="doc">:last</a></li>
+      <li><a href="" class="doc">:eq(index)</a></li>
+      <li><a href="" class="doc">:not(selector)</a></li>
+      <li><a href="" class="doc">:even</a></li>
+      <li><a href="" class="doc">:odd</a></li>
+      <li><a href="" class="doc">:gt(n)</a></li>
+      <li><a href="" class="doc">:lt(n)</a></li>
+      <li><a href="" class="doc">:header</a></li>
+      <li><a href="" class="doc">:animated</a></li>
+      <li><a href="" class="doc">:hidden</a></li>
+      <li><a href="" class="doc">:visible</a></li>
+      <li><a href="" class="doc">:lang()</a></li>
+    </ul>
+    <p><strong>Фильтры дочерних элементов</strong></p>
+    <ul>
+      <li><a href="" class="doc">:first-child</a></li>
+      <li><a href="" class="doc">:last-child</a></li>
+      <li><a href="" class="doc">:nth-child(conditions)</a></li>
+      <li><a href="" class="doc">:nth-child-last(conditions)</a></li>
+      <li><a href="" class="doc">:only-child</a></li>
+      <li><a href="" class="doc">:first-of-type</a></li>
+      <li><a href="" class="doc">:last-of-type</a></li>
+    </ul>
+    <p><strong>Фильтры по содержимому</strong></p>
+    <ul>
+      <li><a href="" class="doc">:contains(text)</a></li>
+      <li><a href="" class="doc">:empty</a></li>
+      <li><a href="" class="doc">:has(selector)</a></li>
+      <li><a href="" class="doc">:parent</a></li>
+    </ul>
+    <p><strong>Фильтры форм</strong></p>
+    <ul>
+      <li><a href="" class="doc">:input</a></li>
+      <li><a href="" class="doc">:button</a></li>
+      <li><a href="" class="doc">:radio</a></li>
+      <li><a href="" class="doc">:checkbox</a></li>
+      <li><a href="" class="doc">:text</a></li>
+      <li><a href="" class="doc">:password</a></li>
+      <li><a href="" class="doc">:file</a></li>
+      <li><a href="" class="doc">:submit</a></li>
+      <li><a href="" class="doc">:reset</a></li>
+      <li><a href="" class="doc">:image</a></li>
+      <li><a href="" class="doc">:focus</a></li>
+      <li><a href="" class="doc">:selected</a></li>
+      <li><a href="" class="doc">:checked</a></li>
+      <li><a href="" class="doc">:enabled</a></li>
+      <li><a href="" class="doc">:disabled</a></li>
+    </ul>
+    <h3>События</h3>
+    <p><strong>Базовые</strong></p>
+    <ul>
+      <li><a class="doc" title="Устанавливает обработчик события на выбранные элементы страницы.">.on()</a></li>
+    </ul>
+    <h3>Работа с набором элементов</h3>
+    <p><strong>Перемещения по DOM</strong></p>
+    <ul>
+      <li><a class="doc" title="Находит элементы, которые лежат перед каждым из выбранных, но не дальше элемента, соответствующего заданному селектору.">.prevUntil()</a></li>
+    </ul>
+  </div>
+</body>
 
-<h3>События</h3>
-<p><strong>Базовые</strong></p>
-<ul>
-  <li><a class="doc" title="Устанавливает обработчик события на выбранные элементы страницы.">.on()</a></li>
-</ul>
-
-<h3>Работа с набором элементов</h3>
-<p><strong>Перемещения по DOM</strong></p>
-<ul>
-  <li><a class="doc" title="Находит элементы, которые лежат перед каждым из выбранных, но не дальше элемента, соответствующего заданному селектору.">.prevUntil()</a></li>
-</ul>
+</html>
