--- a/css/colors/colors.html
+++ b/css/colors/colors.html
@@ -323,6 +323,24 @@
 <div class="colorblock YellowGreen"><span class="color">YellowGreen</span> 	#9ACD32	 	Shades	Mix</div>
 
 
+<h2>White colors</h2>
+<div class="colorblock MistyRose"><span class="color">MistyRose</span> #FFE4E1 255 228 225</div>
+<div class="colorblock AntiqueWhite"><span class="color">AntiqueWhite</span> #FAEBD7 250 235 215</div>
+<div class="colorblock Linen"><span class="color">Linen</span> #FAF0E6 250 240 230</div>
+<div class="colorblock Beige"><span class="color">Beige</span> #F5F5DC 245 245 220</div>
+<div class="colorblock WhiteSmoke"><span class="color">WhiteSmoke</span> #F5F5F5 245 245 245</div>
+<div class="colorblock LavenderBlush"><span class="color">LavenderBlush</span> #FFF0F5 255 240 245</div>
+<div class="colorblock OldLace"><span class="color">OldLace</span> #FDF5E6 253 245 230</div>
+<div class="colorblock AliceBlue"><span class="color">AliceBlue</span> #F0F8FF 240 248 255</div>
+<div class="colorblock Seashell"><span class="color">Seashell</span> #FFF5EE 255 245 238</div>
+<div class="colorblock GhostWhite"><span class="color">GhostWhite</span> #F8F8FF 248 248 255</div>
+<div class="colorblock Honeydew"><span class="color">Honeydew</span> #F0FFF0 240 255 240</div>
+<div class="colorblock FloralWhite"><span class="color">FloralWhite</span> #FFFAF0 255 250 240</div>
+<div class="colorblock Azure"><span class="color">Azure</span> #F0FFFF 240 255 255</div>
+<div class="colorblock MintCream"><span class="color">MintCream</span> #F5FFFA 245 255 250</div>
+<div class="colorblock Snow"><span class="color">Snow</span> #FFFAFA 255 250 250</div>
+<div class="colorblock Ivory"><span class="color">Ivory</span> #FFFFF0 255 255 240</div>
+<div class="colorblock White"><span class="color">White</span> #FFFFFF 255 255 255</div>
 
 </body>
 </html>
