--- a/jquery/on/on.html
+++ b/jquery/on/on.html
@@ -54,7 +54,9 @@
     })
 
     $("body").on("click", ".wrapper .button", function(event) {
+      // Точный дом-объект (может указывать на внутренний элемент).
       console.log('event.target: ', event.target)
+      // Текущий объект (=this) - всегда тот элемент который ловит событие.
       console.log('event.currentTarget: ', event.currentTarget)
       console.log('this: ', this)
     })
