--- a/python/_tasks/eel/web/main.html
+++ b/python/_tasks/eel/web/main.html
@@ -6,7 +6,7 @@
   <!-- <link rel="stylesheet" type="text/css" href=""> -->
   <!-- <style type="text/css"></style> -->
   <script src="eel.js"></script>
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
   <h1>Привет, мир!</h1>
