--- a/css/_tasks/pre/pre.html
+++ b/css/_tasks/pre/pre.html
@@ -8,9 +8,30 @@
   <style type="text/css">
 
     pre.asd {
-      /* TODO */
+      /* Как обрабатываются пробельные символы и переносы */
+      /* По умолчанию: normal */
+      /*
+             | Новые строки | Пробелы      | Перенос по словам | Пробелы в конце строки
+normal       | В одну       | Объединяются | Переносится       | Удаляются
+nowrap       | В одну       | Объединяются | Не переносится    | Удаляются
+pre          | Как источник | Как источник | Не переносится    | Как источник
+pre-wrap     | Как источник | Как источник | Переносится       | Висят
+pre-line     | Как источник | Объединяются | Переносится       | Удаляются
+break-spaces | Как источник | Как источник | Переносится       | Переносятся
+      */
       white-space: pre-wrap;
-      /* TODO */
+
+      /* Обработка слишком длинных слов */
+      /*
+normal
+Поведение по умолчанию для расстановки перевода строк.
+break-all
+При превышении границ блока, перевод строки будет вставлен между любыми двумя символами (за исключением текста на китайском/японском/корейском языке).
+keep-all
+Перевод строки не будет использован в тексте на китайском/японском/корейском языке. Для текста на других языках будет применено поведение по умолчанию (normal).
+break-word 
+При превышении границ блока, обычно остающиеся целыми слова, могут быть разбиты в произвольном месте, если не будет найдено более подходящее для переноса строки место.
+       */
       word-break: break-word;
 
     }
