--- a/css/_tasks/maket_news/4672.html
+++ b/css/_tasks/maket_news/4672.html
@@ -10,11 +10,21 @@
 
   <div style="padding: 20px; margin-top: 25px; margin-bottom: 25px; background: #fff; border: 1px solid #ff6500; border-radius: 5px;">
 
-    <p style="margin: 0 0 15px; font: 13px/16px Tahoma, verdana, sans-serif; color: #383838;">Мы с радостью представляем <strong>новинку</strong> - <a style="text-decoration: underline; color: #ff6500;" target="_blank" href="https://zenonline.ru/cat/000011307">цианоакрилатный однокомпонентный клей OKONG C-501</a>.</p>
-    <p style="margin: 0 0 15px; font: 13px/16px Tahoma, verdana, sans-serif; color: #383838;">Это быстрополимеризующийся однокомпонентный цианоакрилатный клей с низкой вязкостью. Предназначен для материалов, которые трудно поддаются склеиванию. Поверхностная влага в меньшей степени влияет на скорость вулканизации, чем у других стандартных цианоакрилатов.</p>
-    <p style="margin: 0 0 15px; font: 13px/16px Tahoma, verdana, sans-serif; color: #383838;">Одно из главных преимуществ клея OKONG &ndash; возможность монтажа при отрицательных температурах. Удобная встроенная иголка в колпачке помогает избегать застывания клея в носике.</p>
-    <p style="margin: 0 0 15px; font: 13px/16px Tahoma, verdana, sans-serif; color: #383838;">Объем тюбика 20 г.</p>
-    <p style="margin: 0 0 15px; font: 13px/16px Tahoma, verdana, sans-serif; color: #383838;">Арт. 11307.</p>
+    <p style="margin: 0 0 15px; font: 13px/16px Tahoma, verdana, sans-serif; color: #383838;">
+      Мы с радостью представляем <strong>новинку</strong> - <a style="text-decoration: underline; color: #ff6500;" target="_blank" href="https://zenonline.ru/cat/000011307">цианоакрилатный однокомпонентный клей OKONG C-501</a>.
+    </p>
+    <p style="margin: 0 0 15px; font: 13px/16px Tahoma, verdana, sans-serif; color: #383838;">
+      Это быстрополимеризующийся однокомпонентный цианоакрилатный клей с низкой вязкостью. Предназначен для материалов, которые трудно поддаются склеиванию. Поверхностная влага в меньшей степени влияет на скорость вулканизации, чем у других стандартных цианоакрилатов.
+    </p>
+    <p style="margin: 0 0 15px; font: 13px/16px Tahoma, verdana, sans-serif; color: #383838;">
+      Одно из главных преимуществ клея OKONG &ndash; возможность монтажа при отрицательных температурах. Удобная встроенная иголка в колпачке помогает избегать застывания клея в носике.
+    </p>
+    <p style="margin: 0 0 15px; font: 13px/16px Tahoma, verdana, sans-serif; color: #383838;">
+      Объем тюбика 20 г.
+    </p>
+    <p style="margin: 0 0 15px; font: 13px/16px Tahoma, verdana, sans-serif; color: #383838;">
+      Арт. 11307.
+    </p>
 
   </div>
   <p style="margin: 0 0 15px; font: 13px/16px Tahoma, verdana, sans-serif; color: #383838; text-align: center;">
