--- a/js/_tasks/game/index.html
+++ b/js/_tasks/game/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <!-- <link rel="stylesheet" type="text/css" href=""> -->
-  <!-- <style type="text/css"></style> -->
+  <title>Game</title>
+  <link rel="stylesheet" type="text/css" href="dist/main.css">
 </head>
 <body>
   <canvas id="field" width="10" height="10"></canvas>
-  <script type="text/javascript" src="./main.js"></script>
+  <div id="timer"></div>
+  <script type="text/javascript" src="dist/main.js"></script>
 </body>
 </html>
