--- a/js/_tasks/game/index.html
+++ b/js/_tasks/game/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <canvas id="field" width="10" height="10"></canvas>
-  <div id="timer"></div>
+  <button id="timer_button">Play</button>
+  <div id="timer_fps"></div>
+  <div id="timer_diff"></div>
   <script type="text/javascript" src="dist/main.js"></script>
 </body>
 </html>
