--- a/js/_tasks/game/index.html
+++ b/js/_tasks/game/index.html
@@ -12,6 +12,7 @@
   <button id="timer_button">Play</button>
   <div id="timer_fps"></div>
   <div id="timer_diff"></div>
+  <div id="field_path">Путь: <span></span></div>
   <script type="text/javascript" src="dist/main.js"></script>
 </body>
 </html>
