--- a/html/form/form.html
+++ b/html/form/form.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <form id="form_lorem" action="" method="post" enctype="multipart/form-data">
+  <form id="form_lorem" action="" method="get" enctype="multipart/form-data">
     <fieldset>
       <legend>Fields</legend>
       <p>
