--- a/js/form_access/form_access.html
+++ b/js/form_access/form_access.html
@@ -60,6 +60,8 @@
     var data = $('form').serializeArray()
     document.log('data: ', data)
     console.log('data: ', data)
+    document.log('> $(selector).serialize()'.blue())
+    console.log('> $(selector).serialize()')
     var data = $('form').serialize()
     document.log('data: ', data)
     console.log('data: ', data)
