--- a/jquery/ajax/ajax_post.html
+++ b/jquery/ajax/ajax_post.html
@@ -66,7 +66,8 @@
   </form>
   <p><b>Result</b></p>
   <pre id="result"></pre>
-  <script type="text/javascript" src="../../theme/yarn/jquery/dist/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="../../theme/yarn/jquery/dist/jquery.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script type="text/javascript">
 
     "use strict"
