--- a/html/form/form.html
+++ b/html/form/form.html
@@ -49,7 +49,7 @@
       <p>
         <label>
           File
-          <input type="file" name="file">
+          <input type="file" name="file" accept="image/png,image/gif,image/jpeg">
         </label>
       </p>
       <p>
