--- a/js/keycode/keycode.html
+++ b/js/keycode/keycode.html
@@ -9,6 +9,8 @@
 	</style>
 </head>
 <body>
+	<a href="#">a</a> <a href="#">a</a>
+	<input type="text" name="name" value="asd">
 	<script type="text/javascript" src="../../node_modules/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="keycode.js"></script>
 </body>
