--- a/html/form/form.html
+++ b/html/form/form.html
@@ -62,6 +62,8 @@
     <p>
       <button type="reset">Reset</button>
       <button type="submit" name="submit" value="submit" class="submit">Submit</button>
+      <button type="submit" name="submit" value="submit_value_2" class="submit">Submit another value</button>
+      <button type="submit" name="submit_name_2" value="submit" class="submit">Submit name 2</button>
     </p>
   </form>
 </body>
