--- a/jstree/articul/articul.html
+++ b/jstree/articul/articul.html
@@ -21,12 +21,12 @@
   <i class="fa-solid fa-check"></i>
   <div class="wrap">
     static_jstree:
-    <div class="static_jstree"></div>
+    <div class="static_jstree jstree-codes"></div>
   </div>
 
   <div class="wrap">
     articul_jstree with Alternative data:
-    <div class="articul_jstree"></div>
+    <div class="articul_jstree jstree-codes"></div>
   </div>
 
   <script type="text/javascript" src="/jstree/articul/node_modules/jquery/dist/jquery.min.js"></script>
