--- a/css/_tasks/tree_ul_list/index.html
+++ b/css/_tasks/tree_ul_list/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="./tree1.css">
-  <link rel="stylesheet" type="text/css" href="./tree2.css">
+  <link rel="stylesheet" type="text/css" href="./csstree.css">
   <style type="text/css"></style>
 </head>
 <body>
@@ -101,17 +101,17 @@
 
 
       </td>
-      <td style="vertical-align: top;">
+      <td style="width: 25%; vertical-align: top;">
 
 
 <div>
-  <ul class="tree2">
+  <ul class="csstree">
     <li>Dsd</li>
     <li>Sxc
       <details open>
         <summary></summary>
         <ul>
-          <li>Zxc asd</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, distinctio maxime quos soluta eligendi labore neque provident voluptatem error repellat quod nostrum officiis in minus vero ipsam. Ex, minima sequi!</li>
         </ul>
       </details>
     </li>
@@ -138,17 +138,17 @@
 
 
       </td>
-      <td style="vertical-align: top;">
+      <td style="width: 25%; vertical-align: top;">
 
 
 <div style="font-size: 2em;">
-  <ul class="tree2">
+  <ul class="csstree">
     <li>Dsd</li>
     <li>Sxc
       <details open>
         <summary></summary>
         <ul>
-          <li>Zxc asd</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, distinctio maxime quos soluta eligendi labore neque provident voluptatem error repellat quod nostrum officiis in minus vero ipsam. Ex, minima sequi!</li>
         </ul>
       </details>
     </li>
