--- a/js/url/url.html
+++ b/js/url/url.html
@@ -29,6 +29,9 @@ window.location.replace("http://stackoverflow.com");
 // Простое поведения нажатия на ссылку
 window.location.href = "http://stackoverflow.com";
 
+// Метод перезагружает текущий URL-адрес, как кнопка «Обновить».
+window.location.reload()
+
 // Ещё по теме:
 window.history.back()
 window.history.go(-1)
