--- a/css/_tasks/tree_ul_list/index.html
+++ b/css/_tasks/tree_ul_list/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-
+<a href="https://iamkate.com/code/tree-views/">https://iamkate.com/code/tree-views/</a>
 
 <table style="width: 100%;">
   <tbody>
@@ -70,7 +70,16 @@
         zxc
       </summary>
       <ul>
-        <li>zxc asd</li>
+        <li>
+          <details open>
+            <summary>
+              zxc asd zxc asd zxc asd zxc asd zxc asd zxc asd zxc asd zxc asd zxc asd zxc asd zxc asd zxc asd zxc asd zxc asd zxc asd
+            </summary>
+            <ul>
+              <li>111</li>
+            </ul>
+          </details>
+        </li>
       </ul>
     </details>
   </li>
@@ -111,7 +120,14 @@
       <details open>
         <summary></summary>
         <ul>
-          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, distinctio maxime quos soluta eligendi labore neque provident voluptatem error repellat quod nostrum officiis in minus vero ipsam. Ex, minima sequi!</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, distinctio maxime quos soluta eligendi labore neque provident voluptatem error repellat quod nostrum officiis in minus vero ipsam. Ex, minima sequi!
+            <details open>
+              <summary></summary>
+              <ul>
+                <li>111</li>
+              </ul>
+            </details>
+          </li>
         </ul>
       </details>
     </li>
@@ -148,7 +164,14 @@
       <details open>
         <summary></summary>
         <ul>
-          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, distinctio maxime quos soluta eligendi labore neque provident voluptatem error repellat quod nostrum officiis in minus vero ipsam. Ex, minima sequi!</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, distinctio maxime quos soluta eligendi labore neque provident voluptatem error repellat quod nostrum officiis in minus vero ipsam. Ex, minima sequi!
+            <details open>
+              <summary></summary>
+              <ul>
+                <li>111</li>
+              </ul>
+            </details>
+          </li>
         </ul>
       </details>
     </li>
