--- a/js/keycode/keycode.html
+++ b/js/keycode/keycode.html
@@ -9,9 +9,10 @@
 	</style>
 </head>
 <body>
+	<h1>Посмотри в консоль браузера, нажми клавиши</h1>
 	<a href="#">a</a> <a href="#">a</a>
 	<input type="text" name="name" value="asd">
-	<script type="text/javascript" src="../../node_modules/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="keycode.js"></script>
 </body>
 </html>
