--- a/js/url/url.html
+++ b/js/url/url.html
@@ -44,20 +44,36 @@ window.history.go(-1)
     // ВНИМАНИЕ
     // 1. Не используйте escape()
     // 2. encodeURI() — для кодировки __полного__ URL, тоесть сохранит URL работающим.
-    // (
-    //   http://example.ru/a file with spaces.html => http://example.ru/a%20file%20with%20spaces.html
-    // )
+    //    Не кодирует запятые, в значениях могут встречаться и это может приводить к ошибке запроса.
+    //    (
+    //      http://example.ru/a file with spaces.html => http://example.ru/a%20file%20with%20spaces.html
+    //    )
     // 3. encodeURIComponent() — для кодировки __параметра__ URL
-    // (
-    //   var param1 = encodeURIComponent("http://example.org/?a=12&b=55")
-    //   var url = "http://example.ru/?param1=" + param1 + "&param2=99"
-    // )
+    //    (
+    //      var param1 = encodeURIComponent("http://example.org/?a=12&b=55")
+    //      var url = "http://example.ru/?param1=" + param1 + "&param2=99"
+    //    )
     // 
     var encode = encodeURIComponent('zenonline.ru/cgi-bin/articles/client.cgi?action=load_articleslist&amp;phil_id=1&amp;year=2011&amp;month=9')
     var decode = decodeURIComponent('zenonline.ru%2Fcgi-bin%2Farticles%2Fclient.cgi%3Faction%3Dload_articleslist%26amp%3Bphil_id%3D1%26amp%3Byear%3D2011%26amp%3Bmonth%3D9')
-
     document.log('encode: ', encode)
     document.log('decode: ', decode)
+
+    var encoded_params = "filter%5Bnation%5D=ussr&filter%5Btype%5D=&filter%5Brole%5D=&filter%5Btier%5D=6&filter%5Blanguage%5D=ru&filter%5Bpremium%5D=0%2C1"
+    var decoded_params = decodeURIComponent(encoded_params)
+    var reencoded_params = []
+    for (const [key, value] of new URLSearchParams(decoded_params)) {
+      reencoded_params.push(`${encodeURIComponent(key)}=${encodeURIComponent(value)}`)
+    }
+    reencoded_params = reencoded_params.join("&")
+    // Или
+    reencoded_params = Array.from(new URLSearchParams(decoded_params)).map(x => `${encodeURIComponent(x[0])}=${encodeURIComponent(x[1])}`).join("&")
+
+    var t = encodeURI(decoded_params) // Не кодирует запятые, в значениях могут встречаться и это может приводить к ошибке запроса.
+    document.log('encoded_params   : ', encoded_params)
+    document.log('decoded_params   : ', decoded_params)
+    document.log('reencoded_params : ', reencoded_params)
+    document.log('t                : ', t)
 
     document.log('')
     document.log('window.location.href: ', window.location.href)
