--- a/jstree/_tasks/rename_refresh_parent/rename_refresh_parent.html
+++ b/jstree/_tasks/rename_refresh_parent/rename_refresh_parent.html
@@ -12,6 +12,7 @@
     Проблема на проде, когда обновляется родительский узел после переименования, то исчезают потомки у узлов.
   </p>
   <div id="tree"></div>
+  <div id="temp"></div>
 
   <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="node_modules/jstree/dist/jstree.min.js"></script>
