--- a/html/form/form.html
+++ b/html/form/form.html
@@ -34,6 +34,17 @@
         </label>
       </p>
       <p>
+        <label>
+          Select с пустым значением
+          <select name="empty_select" multiple>
+              <option>No selection</option>
+              <option value="a">a</option>
+              <option value="b">b</option>
+              <option value="c">c</option>
+          </select>
+        </label>
+      </p>
+      <p>
         <label style="vertical-align: top;">
           Menu
           <select name="menu[]" multiple>
