--- a/js/queue/queue.html
+++ b/js/queue/queue.html
@@ -62,7 +62,7 @@ new Promise(r=>{
 
 
 
-		<script type="text/javascript" src="/theme/bower/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="../../node_modules/jquery/dist/jquery.min.js"></script>
 		<script type="text/javascript" src="data.js"></script>
 		<script type="text/javascript" src="queue.js"></script>
 	</body>
