--- a/css/colors/colors.html
+++ b/css/colors/colors.html
@@ -332,7 +332,7 @@
 <div class="colorblock LavenderBlush"><span class="color">LavenderBlush</span> #FFF0F5 255 240 245</div>
 <div class="colorblock OldLace"><span class="color">OldLace</span> #FDF5E6 253 245 230</div>
 <div class="colorblock AliceBlue"><span class="color">AliceBlue</span> #F0F8FF 240 248 255</div>
-<div class="colorblock Seashell"><span class="color">Seashell</span> #FFF5EE 255 245 238</div>
+<div class="colorblock SeaShell"><span class="color">SeaShell</span> #FFF5EE 255 245 238</div>
 <div class="colorblock GhostWhite"><span class="color">GhostWhite</span> #F8F8FF 248 248 255</div>
 <div class="colorblock Honeydew"><span class="color">Honeydew</span> #F0FFF0 240 255 240</div>
 <div class="colorblock FloralWhite"><span class="color">FloralWhite</span> #FFFAF0 255 250 240</div>
